@@ -1,33 +1,21 @@
-package ConnectFour;
-
 public class Screen {
     public static void clear() {
-        try {
-            final String os = System.getProperty("os.name").toLowerCase();
-            if (isWindows(os)) {
-                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
-            } else if (isUnix(os) || isMac(os)){
-                Runtime.getRuntime().exec("clear");
-            } else {
-                System.out.print("\033[H\033[2J");
-                System.out.flush();
+        try{
+            String os = System.getProperty("os.name"); //Check the current operating system
+
+            if(os.contains("Windows")){
+                ProcessBuilder pb = new ProcessBuilder("cmd", "/c", "cls");
+                Process process = pb.inheritIO().start();
+                process.waitFor();
             }
-        } catch (Exception e) {
-            Thread.currentThread().interrupt();
+            else {
+                ProcessBuilder pb = new ProcessBuilder("clear");
+                Process process = pb.inheritIO().start();
+
+                process.waitFor();
+            }
+        } catch(Exception e){
+            e.printStackTrace();
         }
-    }
-
-    public static boolean isWindows(String OS) {
-        return (OS.contains("win"));
-    }
-
-    public static boolean isMac(String OS) {
-        return (OS.contains("mac"));
-    }
-
-    public static boolean isUnix(String OS) {
-        return (OS.contains("nix")
-                || OS.contains("nux")
-                || OS.contains("aix"));
     }
 }
